# VulkanCppEngine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README.txt  compile_shaders.bat  run_make_scripts.bat  vcpkg-configuration.json  vcpkg.json
MakeScripts/cmake/: AddExternalPkg.cmake  CommonSettings.cmake  PrePostBuildCommands.cmake  RunMakeScripts.cmake  SetPhonyTargets.cmake
MakeScripts/win32/: compile_shaders.bat  copy_assets.bat  copy_config.bat  copy_dlls.bat  run_make_scripts.bat
MakeScripts/win32/setup_runtime_environment/: compile_shaders.bat  copy_config.bat  copy_external_dlls.bat  run.bat
MakeScripts/win32/setup_runtime_environment/scripts/: copy_assets.bat
assets/shaders/: dot_2d.frag  line_shader.vert  screen_texture_shader.frag  screen_texture_shader.vert
config/: fluidSim2D.yaml  general.yaml
include/: first_app.hpp  keyboard_movement_controller.hpp  lve_camera.hpp  lve_device.hpp  lve_frame_info.hpp  lve_game_object.hpp  lve_io.hpp  lve_pipeline.hpp  lve_renderer.hpp  lve_swap_chain.hpp  simple_compute_system.hpp  simple_render_system.hpp
release/config/: fluidSim2D.yaml
shaders/: dot_2d.vert  line_2d.vert  my_compute_shader.comp  screen_texture_shader.frag  screen_texture_shader.vert  simple_shader.frag  simple_shader.vert
src/: compute_RT_app.cpp  compute_RT_app.hpp  compute_system.cpp  compute_system.hpp  first_app.cpp  first_app.hpp  keyboard_movement_controller.cpp  keyboard_movement_controller.hpp  lve_buffer.cpp  lve_buffer.hpp  lve_camera.cpp  lve_device.cpp  lve_model.cpp  lve_model.hpp  lve_pipeline.cpp  lve_swap_chain.cpp  lve_utils.hpp  lve_window.cpp  main.cpp  my_app.cpp  my_app.hpp  render_system.cpp  render_system.hpp  simple_compute_system.cpp  simple_render_system.cpp
src/app/: fluid_sim_2d.cpp  fluid_sim_2d.hpp  renderer.cpp  renderer.hpp
src/app/fluid_sim/: README.md
src/app/fluid_sim/2d/: app.cpp  app.hpp  fluid_particle_system.cpp  fluid_particle_system.hpp
src/app/fluid_sim_2d/: README.md  app.cpp  app.hpp  fluid_particle_system.cpp  fluid_particle_system.hpp  gpu_resources.cpp  gpu_resources.hpp  handle_input.cpp  mpm.cpp  mpm.hpp  sph.cpp  sph.hpp
src/app/fluid_sim_2d/gpu_resources/: dot_render_pipeline.cpp  dot_render_pipeline.hpp  line_render_pipeline.cpp  line_render_pipeline.hpp  particle_buffer.cpp  particle_buffer.hpp  particle_render_pipeline.cpp  particle_render_pipeline.hpp
src/app/renderer/: app.cpp  app.hpp  controller.cpp  controller.hpp  renderer.cpp
src/include/: glfw.hpp  glm.hpp  spirv_cross.hpp  tiny_obj_loader.hpp  yaml.hpp
src/lve/: CMakeLists.txt  lve_buffer.cpp  lve_buffer.hpp  lve_camera.hpp  lve_descriptors.cpp  lve_descriptors.hpp  lve_device.cpp  lve_device.hpp  lve_file_io.cpp  lve_file_io.hpp  lve_frame_info.hpp  lve_game_object.cpp  lve_game_object.hpp  lve_hash.hpp  lve_image.cpp  lve_image.hpp  lve_input.cpp  lve_input.hpp  lve_io.cpp  lve_math.cpp  lve_math.hpp  lve_math.tpp  lve_model.cpp  lve_model.hpp  lve_pipeline.cpp  lve_pipeline.hpp  lve_pipeline_compute.cpp  lve_pipeline_compute.hpp  lve_pipeline_graphics.cpp  lve_pipeline_graphics.hpp  lve_pipeline_op.cpp  lve_pipeline_op.hpp  lve_renderer.cpp  lve_renderer.hpp  lve_sampler_manager.cpp  lve_sampler_manager.hpp  lve_swap_chain.cpp  lve_swap_chain.hpp  lve_window.cpp  lve_window.hpp  (+1 more)
src/lve/app/: fps.cpp  fps.hpp
src/lve/component/: camera.cpp
src/lve/core/: device.cpp  device.hpp  frame_manager.cpp  frame_manager.hpp  game_object.cpp  game_object.hpp  model.cpp  model.hpp  swap_chain.cpp  swap_chain.hpp  window.cpp  window.hpp
src/lve/core/pipeline/: compute_pipeline.cpp  compute_pipeline.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  pipeline.cpp  pipeline.hpp  pipeline_base.cpp  pipeline_base.hpp  pipeline_op.cpp  pipeline_op.hpp
src/lve/core/resource/: buffer.cpp  buffer.hpp  descriptors.cpp  descriptors.hpp  image.cpp  image.hpp  sampler_manager.cpp  sampler_manager.hpp
src/lve/core/system/: compute_system.cpp  compute_system.hpp  render_system.cpp  render_system.hpp
src/lve/go/: game_object.cpp  game_object.hpp
src/lve/go/comp/: camera.cpp  camera.hpp
src/lve/go/component/: camera.cpp  camera.hpp
src/lve/go/geo/: line.cpp  line.hpp  model.cpp  model.hpp  point.cpp  point.hpp
src/lve/shader/: parser.cpp  parser.hpp  wrapper.cpp  wrapper.hpp
src/lve/shader_tool/: parser.cpp  parser.hpp  spirv_parser.cpp  spirv_parser.hpp
src/lve/util/: config.cpp  config.hpp  config.tpp  config_manager.cpp  config_manager.hpp  config_manager.tpp  file_io.cpp  file_io.hpp  file_io.tpp  hash.hpp  math.cpp  math.hpp  math.tpp
src/system/: compute_system.cpp  compute_system.hpp  render_system.cpp  render_system.hpp
